unpackaged/main/default/objects/Brightcove_Account__c/Brightcove_Account__c.object-meta.xml
<CustomObject>
    <label>Brightcove Account</label>
    <nameField>
        <label>Brightcove Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brightcove Account</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>