unpackaged/main/default/objects/Brightcove_Account__c/fields/Account_Edition_Initial__c.field-meta.xml
<CustomField>
    <fullName>Account_Edition_Initial__c</fullName>
    <label>Account Edition (Initial)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>