unpackaged/main/default/objects/Brightcove_Account__c/fields/Account_Edition_Override__c.field-meta.xml
<CustomField>
    <fullName>Account_Edition_Override__c</fullName>
    <label>Account Edition (Override)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EXPRESS_100</fullName>
            </value>
            <value>
                <fullName>EXPRESS_200</fullName>
            </value>
            <value>
                <fullName>EXPRESS_500</fullName>
            </value>
            <value>
                <fullName>Express Retention $199 Conversion</fullName>
            </value>
            <value>
                <fullName>Express Retention $99 Conversion</fullName>
            </value>
            <value>
                <fullName>EXPRESS_PROMO_5</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite 3.0 - Elite</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite 3.0 - Enterprise</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite 3.0 - Professional</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite 3.0 - Starter I</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite 3.0 - Starter II</fullName>
            </value>
            <value>
                <fullName>Enterprise Video Suite 2.0 - Starter</fullName>
            </value>
            <value>
                <fullName>Enterprise Video Suite 2.0</fullName>
            </value>
            <value>
                <fullName>Brightcove Elite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>