unpackaged/main/default/objects/Brightcove_Account__c/fields/Account_Edition_Previous__c.field-meta.xml
<CustomField>
    <fullName>Account_Edition_Previous__c</fullName>
    <label>Account Edition (Previous)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>