unpackaged/main/default/objects/Brightcove_Account__c/fields/Account_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Email__c</fullName>
    <label>Account Manager Email</label>
    <type>Email</type>
</CustomField>