unpackaged/main/default/objects/Brightcove_Account__c/fields/Account_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Profile__c</fullName>
    <label>Account Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trial</fullName>
                <default>true</default>
                <label>Trial</label>
            </value>
            <value>
                <fullName>CUSTOMER</fullName>
            </value>
            <value>
                <fullName>Solution Partner</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>