unpackaged/main/default/objects/Brightcove_Account__c/fields/Account_Profilex__c.field-meta.xml
<CustomField>
    <fullName>Account_Profilex__c</fullName>
    <formula>if( AND(Is_Trial_Account__c, TEXT(Tier__c) = &#39;Premium&#39;), &quot;Trial&quot;, &quot;Customer&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Profile</label>
    <type>Text</type>
</CustomField>