unpackaged/main/default/objects/Brightcove_Account__c/fields/Ad_Enabled_Account__c.field-meta.xml
<CustomField>
    <fullName>Ad_Enabled_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ad Enabled Account</label>
    <type>Checkbox</type>
</CustomField>