unpackaged/main/default/objects/Brightcove_Account__c/fields/Ad_Manager_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Ad_Manager_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ad Manager Enabled</label>
    <type>Checkbox</type>
</CustomField>