unpackaged/main/default/objects/Brightcove_Account__c/fields/Adobe_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Adobe_Analytics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adobe Analytics</label>
    <type>Checkbox</type>
</CustomField>