unpackaged/main/default/objects/Brightcove_Account__c/fields/Affiliate_Status__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Status__c</fullName>
    <label>Affiliate Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UNREQUESTED</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>ENROLLED</fullName>
            </value>
            <value>
                <fullName>DENIED</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
            <value>
                <fullName>LOCKED</fullName>
            </value>
            <value>
                <fullName>LOCKED FOR NON-PAYMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>