unpackaged/main/default/objects/Brightcove_Account__c/fields/Amount_of_Time_Spent_in_Studio__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Time_Spent_in_Studio__c</fullName>
    <label>Amount of Time Spent in Studio</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>