unpackaged/main/default/objects/Brightcove_Account__c/fields/Avg_Managed_Content_GB_month__c.field-meta.xml
<CustomField>
    <fullName>Avg_Managed_Content_GB_month__c</fullName>
    <label>Avg. Managed Content (GB/month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>