unpackaged/main/default/objects/Brightcove_Account__c/fields/Avg_Stream_Starts_monthly__c.field-meta.xml
<CustomField>
    <fullName>Avg_Stream_Starts_monthly__c</fullName>
    <label>Avg. Stream Starts (monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>