unpackaged/main/default/objects/Brightcove_Account__c/fields/Billing_Account_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Expiration_Date__c</fullName>
    <label>Billing Account Expiration Date</label>
    <type>Date</type>
</CustomField>