unpackaged/main/default/objects/Brightcove_Account__c/fields/Billing_Account_Failed_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Failed_Payment_Amount__c</fullName>
    <label>Billing Account Failed Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>