unpackaged/main/default/objects/Brightcove_Account__c/fields/Billing_Account_Failed_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Failed_Payment_Date__c</fullName>
    <label>Billing Account Failed Payment Date</label>
    <type>Date</type>
</CustomField>