unpackaged/main/default/objects/Brightcove_Account__c/fields/Billing_Account_Last_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Last_Action_Date__c</fullName>
    <label>Billing Account Last Action Date</label>
    <type>Date</type>
</CustomField>