unpackaged/main/default/objects/Brightcove_Account__c/fields/Billing_Account_Last_Action_Performed__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Last_Action_Performed__c</fullName>
    <label>Billing Account Last Action Performed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Expiration Alert (30d)</fullName>
            </value>
            <value>
                <fullName>Expiration Alert (15d)</fullName>
            </value>
            <value>
                <fullName>Expiration Alert (0d)</fullName>
            </value>
            <value>
                <fullName>Failed Payment Alert (0d)</fullName>
            </value>
            <value>
                <fullName>Failed Payment Alert (15d)</fullName>
            </value>
            <value>
                <fullName>Failed Payment Alert (30d)</fullName>
            </value>
            <value>
                <fullName>Lockdown - Initiated</fullName>
            </value>
            <value>
                <fullName>Lockdown - Complete</fullName>
            </value>
            <value>
                <fullName>Unlocked for Back Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>