unpackaged/main/default/objects/Brightcove_Account__c/fields/Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Number__c</fullName>
    <label>Billing Account Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>