unpackaged/main/default/objects/Brightcove_Account__c/fields/Billing_Account_Unlock_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Unlock_for_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Account Unlock for Payment</label>
    <type>Checkbox</type>
</CustomField>