unpackaged/main/default/objects/Brightcove_Account__c/fields/Billing_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contract_ID__c</fullName>
    <description>This is the customer ID from Finance - Unique for each Account - The field is called Billing Customer ID on the account.</description>
    <inlineHelpText>This is the customer ID from Finance - Unique for each Account - The field is called Billing Customer ID on the account.</inlineHelpText>
    <label>Billing Contract ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>