unpackaged/main/default/objects/Brightcove_Account__c/fields/Billing_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Customer_Code__c</fullName>
    <label>Billing Customer Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>