unpackaged/main/default/objects/Brightcove_Account__c/fields/Billing_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Customer_Name__c</fullName>
    <label>Billing Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>