unpackaged/main/default/objects/Brightcove_Account__c/fields/Billing_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Billing_PostalCode__c</fullName>
    <label>Billing PostalCode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>