unpackaged/main/default/objects/Brightcove_Account__c/fields/Billing_Street1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street1__c</fullName>
    <label>Billing Street1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>