unpackaged/main/default/objects/Brightcove_Account__c/fields/Billing_Street2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street2__c</fullName>
    <label>Billing Street2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>