unpackaged/main/default/objects/Brightcove_Account__c/fields/Brightcove_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Brightcove_Account_Id__c</fullName>
    <description>The Pub ID of the Brightcove account&#39;s Id in our own database. Updated via sync from origin-services account.</description>
    <externalId>true</externalId>
    <inlineHelpText>The Pub ID of the Brightcove account&#39;s Id in our own database. Updated via sync from origin-services account.</inlineHelpText>
    <label>Brightcove Account Id</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>