unpackaged/main/default/objects/Brightcove_Account__c/fields/Campaign_Trial_Registration_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Trial_Registration_ID__c</fullName>
    <label>Campaign - Trial Registration (ID)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>