unpackaged/main/default/objects/Brightcove_Account__c/fields/Campaign_Trial_Registration_Link__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Trial_Registration_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign - Trial Registration (Link)</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Brightcove Account</relationshipLabel>
    <relationshipName>Brightcove_Account</relationshipName>
    <type>Lookup</type>
</CustomField>