unpackaged/main/default/objects/Brightcove_Account__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Needed only for one-time campaign</fullName>
            </value>
            <value>
                <fullName>No longer using video</fullName>
            </value>
            <value>
                <fullName>Non-payment (managed termination)</fullName>
            </value>
            <value>
                <fullName>Other Reason</fullName>
            </value>
            <value>
                <fullName>Product Limitations</fullName>
            </value>
            <value>
                <fullName>Project Cancelled</fullName>
            </value>
            <value>
                <fullName>Service became too expensive as customer traffic grew</fullName>
            </value>
            <value>
                <fullName>Service not meeting needs</fullName>
            </value>
            <value>
                <fullName>Support Issue</fullName>
            </value>
            <value>
                <fullName>Switched to competitor</fullName>
            </value>
            <value>
                <fullName>Switched to DIY</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Upgraded</fullName>
            </value>
            <value>
                <fullName>Went out of business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>