unpackaged/main/default/objects/Brightcove_Account__c/fields/Cancellation_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_Detail__c</fullName>
    <label>Cancellation Reason Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One time campaign</fullName>
            </value>
            <value>
                <fullName>Out of business</fullName>
            </value>
            <value>
                <fullName>Budget cut</fullName>
            </value>
            <value>
                <fullName>Overage costs</fullName>
            </value>
            <value>
                <fullName>Employee turnover</fullName>
            </value>
            <value>
                <fullName>Lack of invoicing</fullName>
            </value>
            <value>
                <fullName>Rigid package structure</fullName>
            </value>
            <value>
                <fullName>Project cancelled</fullName>
            </value>
            <value>
                <fullName>No longer using video</fullName>
            </value>
            <value>
                <fullName>Unresponsive to ticket</fullName>
            </value>
            <value>
                <fullName>Misunderstood issue</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Too much back &amp; forth</fullName>
            </value>
            <value>
                <fullName>SLA too long</fullName>
            </value>
            <value>
                <fullName>Responses too technical</fullName>
            </value>
            <value>
                <fullName>JW Player</fullName>
            </value>
            <value>
                <fullName>Vimeo</fullName>
            </value>
            <value>
                <fullName>Kitdigital</fullName>
            </value>
            <value>
                <fullName>Vzaar</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>Amazon S3</fullName>
            </value>
            <value>
                <fullName>DIY</fullName>
            </value>
            <value>
                <fullName>Oculu</fullName>
            </value>
            <value>
                <fullName>Ooyala</fullName>
            </value>
            <value>
                <fullName>Flow Player</fullName>
            </value>
            <value>
                <fullName>Foldering</fullName>
            </value>
            <value>
                <fullName>Related videos</fullName>
            </value>
            <value>
                <fullName>UGC</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Analytics - video level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>