unpackaged/main/default/objects/Brightcove_Account__c/fields/Constituency__c.field-meta.xml
<CustomField>
    <fullName>Constituency__c</fullName>
    <label>Constituency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Publisher</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>