unpackaged/main/default/objects/Brightcove_Account__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Brightcove Account</relationshipLabel>
    <relationshipName>Brightcove_Account</relationshipName>
    <type>Lookup</type>
</CustomField>