unpackaged/main/default/objects/Brightcove_Account__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <label>Contract Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>