unpackaged/main/default/objects/Brightcove_Account__c/fields/Current_Month_Ending__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Ending__c</fullName>
    <label>Current Month Ending</label>
    <type>Date</type>
</CustomField>