unpackaged/main/default/objects/Brightcove_Account__c/fields/Current_Month_Managed_Content_GB__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Managed_Content_GB__c</fullName>
    <label>Current Month Managed Content (GB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>