unpackaged/main/default/objects/Brightcove_Account__c/fields/Current_Month_Stream_Starts__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Stream_Starts__c</fullName>
    <label>Current Month Stream Starts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>