unpackaged/main/default/objects/Brightcove_Account__c/fields/Custom_Fields__c.field-meta.xml
<CustomField>
    <fullName>Custom_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Fields</label>
    <type>Checkbox</type>
</CustomField>