unpackaged/main/default/objects/Brightcove_Account__c/fields/Date_of_Last_Subscription_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Subscription_Change__c</fullName>
    <label>Date of Last Subscription Change</label>
    <type>Date</type>
</CustomField>