unpackaged/main/default/objects/Brightcove_Account__c/fields/Date_of_Subscription_Initial__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Subscription_Initial__c</fullName>
    <label>Date of Subscription (Initial)</label>
    <type>Date</type>
</CustomField>