unpackaged/main/default/objects/Brightcove_Account__c/fields/Date_of_Subscription_Latest__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Subscription_Latest__c</fullName>
    <label>Date of Subscription (Latest)</label>
    <type>Date</type>
</CustomField>