unpackaged/main/default/objects/Brightcove_Account__c/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <formula>RIGHT(Email_Address__c, (LEN(Email_Address__c)-FIND(&#39;@&#39;, Email_Address__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Domain</label>
    <type>Text</type>
</CustomField>