unpackaged/main/default/objects/Brightcove_Account__c/fields/EOL_Q308_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>EOL_Q308_Last_Login__c</fullName>
    <label>EOL Q308 Last Login</label>
    <type>Date</type>
</CustomField>