unpackaged/main/default/objects/Brightcove_Account__c/fields/EOL_Q308_Player_Loads__c.field-meta.xml
<CustomField>
    <fullName>EOL_Q308_Player_Loads__c</fullName>
    <label>EOL Q308 Player Loads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>