unpackaged/main/default/objects/Brightcove_Account__c/fields/EOL_Q308_Videos__c.field-meta.xml
<CustomField>
    <fullName>EOL_Q308_Videos__c</fullName>
    <label>EOL Q308 Videos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>