unpackaged/main/default/objects/Brightcove_Account__c/fields/Experience_Manager__c.field-meta.xml
<CustomField>
    <fullName>Experience_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experience Manager</label>
    <type>Checkbox</type>
</CustomField>