unpackaged/main/default/objects/Brightcove_Account__c/fields/First_Video_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Video_Upload_Date__c</fullName>
    <label>First Video Upload Date</label>
    <type>Date</type>
</CustomField>