unpackaged/main/default/objects/Brightcove_Account__c/fields/Gallery_Status__c.field-meta.xml
<CustomField>
    <fullName>Gallery_Status__c</fullName>
    <label>Gallery Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Enabled</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Trial Expired</fullName>
            </value>
            <value>
                <fullName>Paying</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>