unpackaged/main/default/objects/Brightcove_Account__c/fields/Google_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Google_Analytics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Google Analytics</label>
    <type>Checkbox</type>
</CustomField>