unpackaged/main/default/objects/Brightcove_Account__c/fields/GUID__c.field-meta.xml
<CustomField>
    <fullName>GUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>GUID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>