unpackaged/main/default/objects/Brightcove_Account__c/fields/iMarketing_Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>iMarketing_Contact_Source__c</fullName>
    <label>iMarketing Contact Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SEM</fullName>
            </value>
            <value>
                <fullName>Display Campaign</fullName>
            </value>
            <value>
                <fullName>Untracked</fullName>
            </value>
            <value>
                <fullName>Partner Program</fullName>
            </value>
            <value>
                <fullName>Partner Program (non-ROIA)</fullName>
            </value>
            <value>
                <fullName>Right Click Link</fullName>
            </value>
            <value>
                <fullName>Australia SEM</fullName>
            </value>
            <value>
                <fullName>Ektron</fullName>
            </value>
            <value>
                <fullName>Vistaprint</fullName>
            </value>
            <value>
                <fullName>SEM EMEA</fullName>
            </value>
            <value>
                <fullName>Online Media EMEA</fullName>
            </value>
            <value>
                <fullName>Singapore SEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>