unpackaged/main/default/objects/Brightcove_Account__c/fields/is_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>is_Affiliate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Affiliate</label>
    <type>Checkbox</type>
</CustomField>