unpackaged/main/default/objects/Brightcove_Account__c/fields/is_Consumer__c.field-meta.xml
<CustomField>
    <fullName>is_Consumer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Consumer</label>
    <type>Checkbox</type>
</CustomField>