unpackaged/main/default/objects/Brightcove_Account__c/fields/Is_Publisher__c.field-meta.xml
<CustomField>
    <fullName>Is_Publisher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Publisher</label>
    <type>Checkbox</type>
</CustomField>