unpackaged/main/default/objects/Brightcove_Account__c/fields/Is_Storymaker__c.field-meta.xml
<CustomField>
    <fullName>Is_Storymaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Storymaker</label>
    <type>Checkbox</type>
</CustomField>