unpackaged/main/default/objects/Brightcove_Account__c/fields/Is_Trial_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Trial_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Trial Account</label>
    <type>Checkbox</type>
</CustomField>