unpackaged/main/default/objects/Brightcove_Account__c/fields/Jetfire_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Jetfire_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jetfire Enabled</label>
    <type>Checkbox</type>
</CustomField>